# app/Http/Controllers/Task/EditController.php
@@ -13,7 +13,49 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Validation\ValidationException;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Parameter;
+use OpenApi\Attributes\Patch;
+use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Response;
 
+
+#[Patch(
+    path: '/api/tasks/{id}',
+    description: 'Update Task',
+    summary: 'Update Task',
+    security: [['sanctum' => []]],
+    requestBody: new RequestBody(
+        description: 'Registration request',
+        content:
+        new JsonContent(
+            ref: '#/components/schemas/TaskRequest',
+        )
+    ),
+    tags: ['Tasks'],
+    parameters: [
+        new Parameter(
+            name: 'id',
+            description: 'Task Id',
+            in: 'path',
+            required: true,
+            example: 1
+        )
+    ],
+    responses: [
+        new Response(
+            response: 200,
+            description: 'Success',
+            content: new JsonContent(
+                ref: '#/components/schemas/TaskResource',
+            )
+        ),
+        new Response(
+            response: 401,
+            description: 'Error: Unauthorized',
+        ),
+    ]
+)]
 class EditController extends Controller
 {
 
