# app/Http/Controllers/Task/NewController.php
@@ -10,7 +10,42 @@ use App\Http\Resources\TaskResource;
 use App\Repositories\TaskRepository\TaskRepositoryInterface;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Auth;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Post;
+use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Response;
 
+
+#[Post(
+    path: '/api/tasks',
+    summary: 'Create Task',
+    security: [['sanctum' => []]],
+    requestBody: new RequestBody(
+        description: 'Task request',
+        content:
+        new JsonContent(
+            ref: '#/components/schemas/TaskRequest',
+        )
+    ),
+    tags: ['Tasks'],
+    responses: [
+        new Response(
+            response: 201,
+            description: 'Success',
+            content: new JsonContent(
+                ref: '#/components/schemas/TaskResource',
+            )
+        ),
+        new Response(
+            response: 422,
+            description: 'Error: Unprocessable Entity',
+        ),
+        new Response(
+            response: 401,
+            description: 'Error: Error: Unauthorized',
+        )
+    ],
+)]
 class NewController extends Controller
 {
 
